--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "com.cam.camutil",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "displayName": "Cam Utilities",
-  "description": "Cameron's personal tools.",
+  "description": "Cameron's personal tools, mainly for personal use.",
   "keywords": [
     "tools",
     "editor"
@@ -12,5 +12,12 @@
     "email": "cameo221@gmail.com",
     "url": "cammin.itch.io"
   },
-  "hideInEditor": false
+  "hideInEditor": false,
+  "dependencies": {
+    "com.unity.inputsystem": "1.0.0",
+    "jillejr.newtonsoft.json-for-unity": "12.0.301",
+    "com.johannesmp.unityscenereference": "1.1.0",
+    "com.marijnzwemmer.unity-toolbar-extender": "1.2.0",
+    "com.malee.reorderablelist": "1.0.1"
+  }
 }
