--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "com.cam.camutil",
   "version": "1.1.11",
   "displayName": "Cam Utilities",
-  "description": "Cameron's personal tools, mainly for personal use. Requires:\nNew Unity Input System\nhttps://github.com/jilleJr/Newtonsoft.Json-for-Unity.git\nhttps://github.com/marijnz/unity-toolbar-extender.git\nhttps://github.com/starikcetin/unity-scene-reference.git\nhttps://github.com/cfoulston/Unity-Reorderable-List.git\n\nOptional packages:\nhttps://github.com/needle-tools/compilation-visualizer\n\nAlso grab asset store packs like rainbow folders, etc.",
+  "description": "Cameron's personal tools, mainly for personal use. Check the README for adding dependencies.\nAlso grab asset store packs like rainbow folders, etc.",
   "keywords": [
     "tools",
     "editor"
