--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.cam.camutil",
-  "version": "1.1.11",
+  "version": "1.1.13",
   "displayName": "Cam Utilities",
   "description": "Cameron's personal tools, mainly for personal use. Check the README for adding dependencies.\nAlso grab asset store packs like rainbow folders, etc.",
   "keywords": [
@@ -11,6 +11,13 @@
     "name": "Cameron Krebbers",
     "email": "cameo221@gmail.com",
     "url": "cammin.itch.io"
+  },
+  "dependencies": {
+    "com.unity.inputsystem": "1.0.0",
+    "jillejr.newtonsoft.json-for-unity": "12.0.301",
+    "com.johannesmp.unityscenereference": "1.1.0",
+    "com.marijnzwemmer.unity-toolbar-extender": "1.2.0",
+    "com.malee.reorderablelist": "1.0.1"
   },
   "hideInEditor": false
 }
