--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "com.cam.camutil",
-  "version": "1.1.16",
-  "displayName": "Cam Utilities",
-  "description": "Cameron's personal tools, mainly for personal use. Check the README for adding dependencies.\nAlso grab asset store packs like rainbow folders, etc.",
+  "name": "com.cammin.camutilities",
+  "version": "1.0.0",
+  "displayName": "Cammin's Utilities",
+  "description": "Cammin's personal tools, mainly for personal use.",
   "keywords": [
     "tools",
-    "editor"
+    "editor",
+    "utility"
   ],
   "author": {
     "name": "Cameron Krebbers",
     "email": "cameo221@gmail.com",
     "url": "cammin.itch.io"
-  },
-  "dependencies": {
-    "com.unity.inputsystem": "1.0.0",
-    "jillejr.newtonsoft.json-for-unity": "12.0.301",
-    "com.johannesmp.unityscenereference": "1.1.0",
-    "com.marijnzwemmer.unity-toolbar-extender": "1.2.0",
-    "com.malee.reorderablelist": "1.0.1"
   },
   "hideInEditor": false
 }
