--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -33,6 +33,17 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
-  }
+    "com.unity.modules.xr": "1.0.0",
+    "com.needle.compilation-visualizer": "1.4.0"
+  },
+  "scopedRegistries": [
+    {
+      "name": "package.openupm.com",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.needle.compilation-visualizer",
+        "com.openupm"
+      ]
+    }
+  ]
 }
