singleton and dev build quitter

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.needle.compilation-visualizer": "1.4.0",
     "com.unity.ide.rider": "3.0.7",
     "com.unity.test-framework": "1.1.27",
     "com.unity.ugui": "1.0.0",
@@ -33,8 +34,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.needle.compilation-visualizer": "1.4.0"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
