--- a/Assets/CamLib/Runtime/CamLib.Runtime.asmdef
+++ b/Assets/CamLib/Runtime/CamLib.Runtime.asmdef
@@ -2,7 +2,8 @@
     "name": "CamLib.Runtime",
     "rootNamespace": "",
     "references": [
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:15fc0a57446b3144c949da3e2b9737a9"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -11,6 +12,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.render-pipelines.universal",
+            "expression": "",
+            "define": "CAMLIB_URP"
+        }
+    ],
     "noEngineReferences": false
 }
