sticking with only support for the newest version. general package updates

--- a/Assets/CamLib/package.json
+++ b/Assets/CamLib/package.json
@@ -1,11 +1,12 @@
 {
   "name": "com.cammin.camlib",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "displayName": "CamLib",
   "description": "Cammin's personal Unity utility library.",
   "documentationUrl": "https://github.com/Cammin/CamLib",
   "changelogUrl": "https://github.com/Cammin/CamLib/blob/master/Assets/CamLib/CHANGELOG.md",
   "licensesUrl": "https://github.com/Cammin/CamLib/blob/master/LICENSE.md",
+  "unity": "2022.1",
   "keywords": [
     "tools",
     "editor",
