--- a/Assets/Tests/Editor/CamLib.Tests.Editor.asmdef
+++ b/Assets/Tests/Editor/CamLib.Tests.Editor.asmdef
@@ -1,9 +1,10 @@
 {
-    "name": "CamLib.Editor.Tests",
+    "name": "CamLib.Tests.Editor",
     "rootNamespace": "",
     "references": [
         "GUID:4c6481a3fda231149af656b47013c153",
-        "GUID:c304ee7b0467328498c20baef492b467"
+        "GUID:c304ee7b0467328498c20baef492b467",
+        "GUID:403b104b1eabd9b40bb47651e40cc61e"
     ],
     "includePlatforms": [
         "Editor"
