--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.needle.compilation-visualizer": "1.4.0",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.ide.rider": "3.0.15",
     "com.unity.render-pipelines.universal": "13.1.8",
     "com.unity.test-framework": "1.1.31",
