--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,9 +2,10 @@
   "dependencies": {
     "com.needle.compilation-visualizer": "1.4.0",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.ide.rider": "3.0.15",
-    "com.unity.render-pipelines.universal": "13.1.8",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.ai.navigation": "1.1.5",
+    "com.unity.ide.rider": "3.0.27",
+    "com.unity.render-pipelines.universal": "14.0.9",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
