--- a/Editor/CamLib.Editor.asmdef
+++ b/Editor/CamLib.Editor.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "CamLib.Editor",
-    "rootNamespace": "",
+    "rootNamespace": "CamLib.Editor",
     "references": [
         "GUID:4c6481a3fda231149af656b47013c153",
         "GUID:d571ac0f02cbde94894721a8744da082"
