--- a/Runtime/CamLib.Runtime.asmdef
+++ b/Runtime/CamLib.Runtime.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "CamLib.Runtime",
-    "rootNamespace": "",
+    "rootNamespace": "CamLib",
     "references": [
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:15fc0a57446b3144c949da3e2b9737a9"
