--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "com.cammin.camlib",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "displayName": "CamLib",
-  "description": "Cammin's personal Unity utility library.",
+  "description": "Cammin's personal Unity utility library. I don't give any regard to compatibility or unity version, so beware!",
   "documentationUrl": "https://github.com/Cammin/CamLib",
   "licensesUrl": "https://github.com/Cammin/CamLib/blob/master/LICENSE.md",
   "unity": "2022.1",
