--- a/Runtime/CamLib.Runtime.asmdef
+++ b/Runtime/CamLib.Runtime.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "CamLib",
     "references": [
         "GUID:516a5277b8c3b4f4c8cc86b77b1591ff",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:df380645f10b7bc4b97d4f5eb6303d95"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -17,6 +18,11 @@
             "name": "com.unity.render-pipelines.universal",
             "expression": "12.1.4",
             "define": "CAMLIB_URP"
+        },
+        {
+            "name": "com.unity.render-pipelines.core",
+            "expression": "17.1.0",
+            "define": "CAMLIB_RP"
         }
     ],
     "noEngineReferences": false
